# xack

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
src/xack/: __init__.py
src/xack/algo/: __init__.py  fizzbuzz.py  primes.py
src/xack/ds/: __init__.py
