[project]
name = "xack"
version = "0.1.0"
description = "Tutorials on computer programming theory and techniques."
readme = "README.md"
authors = [ { name = "Medardo Antonio Rodriguez" } ]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "numpy>=2.1.3",
]

[project.scripts]
xack = "xack:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "tests", "docs"]

[dependency-groups]
tests = [
    "pytest>=8.3.3",
]
docs = [
    "sphinx>=8.1.3",
]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "tcl>=0.2",
    "tk>=0.1.0",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "preserve"
